<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgendaVital</string>
    <string name="app_id">332054170323506</string>
    <string name="action_settings">Settings</string>
    <string name="agenda">Agenda Vital</string>
    <string name="comenzar">Comenzar</string>
    <string name="conf">Configuración</string>
    <string name="pregunta">Pregunta</string>
    <string name="salir">Salir</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_preguntas">Preguntas</string>
    <string name="email">Email</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancelar">Cancelar</string>
    <string name="resp">Ver respuestas</string>
    <string name="title_activity_respuestas">Respuestas</string>
    <string name="atras">Atrás</string>
    <string name="menu">Menú Principal</string>

</resources>
