<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:weightSum="1"
    android:background="#93c6d6">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resp"
        android:paddingBottom="20dp"
        android:textColor="#508991"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:text="@string/pregunta" />

    <TextView
        android:id="@+id/TxtPreguntaRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/TxtRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:baselineAligned="false"
        android:layout_weight="0.75">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:id="@+id/BtnAtrasResp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:id="@+id/BtnSiguienteResp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/BtnMenuResp"
        android:layout_gravity="bottom|right"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"/>

</LinearLayout>