<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dip"
    android:weightSum="1"
    android:background="#93c6d6">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pregunta"
        android:paddingBottom="20dp"
        android:textColor="#508991"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/TxtNPregunta"
        android:text="@string/pregunta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/TxtPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/EditResp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:baselineAligned="false"
        android:layout_weight="0.75">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:id="@+id/BtnSiguiente"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:id="@+id/BtnEnviarEmail"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Compartir"
            android:id="@+id/BtnCompartir"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/BtnMenuPreg"
        android:layout_gravity="bottom|right"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        />

</LinearLayout>
